# Langgraph-RAG-system

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: rag_config_example.yaml
docs/rag/: getting_started.md  langchain.md  langgraph.md  rag.md
src/: __init__.py  config.py  database.py  embedding_factory.py  graph.py  ingestion.py  llm_factory.py  loaders.py
